# VPN

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  ecosystem.config.cjs  pyproject.toml
.github/workflows/: ci.yml
docs/: AUDITORIA-SEGURIDAD.md  ESPECIFICACION.md  INSTALACION.md  MANUAL-DE-USO.md
e2e/: test_panel.py
sandbox/openvpn/: server.conf
sandbox/openvpn/pki/: index.txt
sandbox/wireguard/: wg-show.txt  wg0.conf
tests/: test_metrics.py  test_openvpn.py  test_wireguard_realkeys.py
vpn_manager/: __init__.py  __main__.py  audit.py  auth.py  bootstrap.py  config.py  delivery.py  hashpw.py  installer.py  preflight.py  totp.py  users.py
vpn_manager/api/: app.py
vpn_manager/backends/: base.py  openvpn.py  openvpn_schema.py  wireguard.py  wireguard_schema.py
vpn_manager/ui/: index.html  login.html
vpn_manager/ui/assets/: README.md
