[project]
name = "vpn-manager"
version = "0.3.0"
description = "Panel web para gestionar servidores VPN (OpenVPN y WireGuard)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "itsdangerous>=2.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["vpn_manager*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
