[project]
name = "vpn-manager"
version = "1.0.0"
description = "Web panel for managing VPN servers (OpenVPN and WireGuard)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "itsdangerous>=2.1",
    "python-multipart>=0.0.9",
    "segno>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.27",
    "ruff>=0.6",
]
e2e = [
    "pytest>=7.4",
    "pytest-playwright>=0.5",
]

[tool.setuptools.packages.find]
include = ["vpn_manager*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
